<?xml version="1.0"?>
<package format="2">
  <name>astra_camera</name>
  <version>0.1.5</version>
  <description>Drivers for Orbbec Astra Devices. </description>
  <author email="liuhua@orbbec.com">Tim Liu</author>
  <license>BSD</license>

  <maintainer email="liuhua@orbbec.com">Tim Liu</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>git</depend>
  <depend>image_transport</depend>
  <depend>libudev-dev</depend>
  <depend>libusb-1.0-dev</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/astra_nodelets.xml"/>
  </export>
</package>
